# grayscalelib.core

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/grayscalelib/core/: __init__.py  discretization.py  generate.py  numpy.py  numpypixels.py  pixels.py  pixels.pyi  protocols.py  simplearray.py  simplepixels.py
src/grayscalelib/core/tests/: conftest.py  pixels_test.py  simplearray_test.py  simplepixels_test.py  test_discretization.py  test_pixels.py
src/grayscalelib/interface/: __init__.py  auxiliary.py  generate.py  pixels.py  pixels.pyi
